# sf-data-pipelines

./: .gitignore  BARRA.md  README.md  TESTING.md  barra_assets_flow.py  barra_covariances_flow.py  barra_exposures_flow.py  barra_ids_flow.py  barra_returns_flow.py  barra_risk_flow.py  constituency_ffill_test.py  constraints.py  crontab.sh  database.py  diagnostic.py  example.py  examples.ipynb  ftse_russell_flow.py  generate_portfolio.py  get_covariance_matrix.py  main.py  optimizers.py  portfolios.py  pyproject.toml  test copy.py  test.py  tools.py
barra/: files.py  utils.py
docs/: BARRA.md  README.md  WRDS.md
pipelines/: __main__.py  _barra_factors_flow.py  _barra_specific_returns_flow.py  active_weights_flow.py  all_pipelines.py  barra_assets_flow.py  barra_covariances_flow.py  barra_exposures_flow.py  barra_factors_flow.py  barra_file.py  barra_ids_flow.py  barra_returns_flow.py  barra_risk_flow.py  barra_specific_returns.py  barra_specific_returns_flow.py  barra_volume_flow.py  composite_alphas.py  covariance_matrix.py  covariance_matrix_flow.py  crsp_daily_flow.py  crsp_events_flow.py  crsp_monthly_flow.py  database.py  ftse_russell_flow.py  records.py  risk_parity_flow.py  signals_flow.py  tools.py  utils.py
sf_data_pipelines/: __main__.py  all_pipelines.py  barra_assets_flow.py  barra_covariances_flow.py  barra_cusips_flow.py  barra_exposures_flow.py  barra_factors_flow.py  barra_ids_flow.py  barra_returns_flow.py  barra_risk_flow.py  barra_specific_returns.py  barra_tickers_flow.py  barra_volume_flow.py  covariance_matrix_flow.py  crsp_daily_flow.py  (+4 more)
(+97 files in other folders)
